Update MODELS-nyc taxi trip duration.ipynb

--- a/MODELS-nyc taxi trip duration.ipynb
+++ b/MODELS-nyc taxi trip duration.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=pd.read_csv(\"C:/Users/vsoun/Downloads/nyc_taxi_trip_duration.csv\")"
+    "data=pd.read_csv(\"nyc_taxi_trip_duration.csv\")"
    ]
   },
   {
